@@ -1,6 +1,7 @@
 0.15
  - fix unicode issues in test t/10_responses.t (ioanrogers)
  - ElasticBeanstalk API update: support for Instance and Environment health 
+ - Codepipeline API update: support for encription key
 
 0.14
  - LWP Caller (Paws::Net::LWPCaller). Paws supports calling behind HTTPS proxies with LWP (dtikhonov)
